--- a/project4/css/style.css
+++ b/project4/css/style.css
@@ -23,7 +23,10 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px,1fr));
     gap: 10px;
-}
+    height: 512px;
+    overflow: scroll;
+  }
+
 .wrapper{
     margin: 0 auto;
     width: 70vw;
