--- a/project4/css/style.css
+++ b/project4/css/style.css
@@ -93,8 +93,10 @@ p{
 
 img{
   opacity: 1;
-  object-fit:contain;
+  object-fit:cover;
   width: 100%;
+  transition: all 0.5s ease-in-out;
+  border: 15px solid var(--gradient1);
 
 }
 
